Closed
Bug 326964
Opened 20 years ago
Closed 20 years ago
###!!! ASSERTION: Invalid node type!: '(nodeType == nsIDOMNode::ELEMENT_NODE || nodeType == nsIDOMNode::TEXT_NODE || ... , file m:/mozilla/content/base/src/nsGenericElement.cpp, line 394
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
People
(Reporter: WeirdAl, Assigned: caillon)
Details
(Keywords: assertion, testcase)
Attachments
(3 files, 1 obsolete file)
|
7.16 KB,
text/plain
|
Details | |
|
3.97 KB,
application/xml
|
Details | |
|
1.25 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
I called on (DocumentType)->compareDocumentPosition(node), and hit this assertion. Tracing the code onward, it's clear Mozilla does the right thing and returns the right value. So for document type nodes, this assertion is bogus.
Testcase and patch coming up.
| Reporter | ||
Comment 1•20 years ago
|
||
| Reporter | ||
Comment 2•20 years ago
|
||
| Reporter | ||
Comment 3•20 years ago
|
||
Sorry, the original test case had leftover debugging code in it and wouldn't return completely correct results.
Attachment #211670 -
Attachment is obsolete: true
| Reporter | ||
Comment 4•20 years ago
|
||
Reference attachment 211672 [details] for the testcase, and ignore the alert. For x.compareDocumentPosition(y), x represents the row, and y represents the column.
| Reporter | ||
Comment 5•20 years ago
|
||
Attachment #211673 -
Flags: superreview?(bzbarsky)
Attachment #211673 -
Flags: review?(bzbarsky)
Updated•20 years ago
|
Attachment #211673 -
Flags: superreview?(bzbarsky)
Attachment #211673 -
Flags: superreview+
Attachment #211673 -
Flags: review?(bzbarsky)
Attachment #211673 -
Flags: review+
Comment 6•20 years ago
|
||
checked in to trunk:
Checking in content/base/src/nsGenericElement.cpp;
/cvsroot/mozilla/content/base/src/nsGenericElement.cpp,v <-- nsGenericElement.cpp
new revision: 3.447; previous revision: 3.446
done
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•