Bug 326964 - fixed bogus assertion (missing nsIDOMNode::DOCUMENT_TYPE_NODE), p=ajvincent@gmail.com, r+sr=bz